--- a/index.html
+++ b/index.html
@@ -1,91 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Моя Рулетка Кейсов</title>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            margin: 0;
-            background-color: #2c2c2c; /* Темный фон */
-            color: #ffffff; /* Белый текст */
-        }
-        .container {
-            text-align: center;
-            padding: 20px;
-            border-radius: 10px;
-            background-color: #3a3a3a;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-        h1 {
-            color: #61dafb; /* Яркий заголовок */
-        }
-        button {
-            background-color: #007bff;
-            color: white;
-            padding: 15px 30px;
-            border: none;
-            border-radius: 8px;
-            font-size: 1.2em;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        p {
-            margin-top: 20px;
-            font-size: 1.1em;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>Добро пожаловать в рулетку!</h1>
-        <p id="status">Нажми кнопку, чтобы начать.</p>
-        <button id="spinButton">Крутить барабан!</button>
-    </div>
-
-    <script>
-        // Инициализация Telegram Web App
-        const tg = window.Telegram.WebApp;
-        tg.ready();
-        tg.expand(); // Разворачиваем WebApp на весь экран
-
-        const spinButton = document.getElementById('spinButton');
-        const statusText = document.getElementById('status');
-
-        spinButton.addEventListener('click', () => {
-            statusText.textContent = "Барабан крутится...";
-            spinButton.disabled = true;
-
-            // Здесь будет логика рулетки и оплаты Telegram Stars
-            // Пока просто имитация
-            setTimeout(() => {
-                const result = "Мишка"; // Имитация выпавшего приза
-                statusText.textContent = `Тебе выпал: ${result}!`;
-                spinButton.disabled = false;
-
-                // Отправляем результат обратно в бота
-                // Это ОЧЕНЬ ВАЖНАЯ СТРОКА: она передает данные обратно в Python-бота
-                tg.sendData(JSON.stringify({ prize: result, status: "success", cost: 10 }));
-
-            }, 3000); // Имитация кручения 3 секунды
-        });
-
-        // Пример получения данных из бота (если бот что-то отправит в WebApp)
-        tg.onEvent('mainButtonClicked', () => {
-            // Если ты используешь основную кнопку Telegram Web App
-            // tg.sendData(...)
-        });
-
-    </script>
-</body>
-</html>
+<h1>Hello</h1>
